# EmbodiedMind

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: agents.yaml  eval_red_block_blue_box.yaml  tabletop.yaml
embodiedmind/: system.py
embodiedmind/agents/: action_agent.py  critic_agent.py  perception_agent.py  planner_agent.py  reflection_agent.py
embodiedmind/dsl/: action_schema.py  executor.py
embodiedmind/envs/: robot_interface.py  tabletop_env.py
embodiedmind/models/: llm_client.py  perception_model.py
embodiedmind/policies/: constraint_checker.py  pick_place_policy.py  recovery_policy.py
embodiedmind/utils/: config.py  logger.py
embodiedmind/world/: object_registry.py  spatial_reasoner.py  world_state.py
evaluation/: ablation.py  metrics.py  run_eval.py
examples/: run_red_block_blue_box.py
scripts/: reproduce_table1.sh  run_demo.sh  run_eval.sh
tasks/: red_block_blue_box.json
tests/: test_action_schema.py  test_world_state.py
